[tool.poetry]
name = "algorithm"
version = "1.0.0"
description = "Common algorithms implemented in Python"
authors = ["Khoa Nguyen <khoadnguyen.se@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
poethepoet = "^0.16.0"

[tool.poe.tasks]
format = "black ."

[tool.poe.tasks.test]
shell = "python -m unittest discover -s $dir -p '*.py'"
help = "Run all test inside the given directory"

[[tool.poe.tasks.test.args]]
name = "dir"
help = "Name of the directory to test"
options = ["-D", "--dir"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
